tests/positive/rule4_factory.safe
-- Test: rule4_factory
-- Description: Factory pattern returning not-null inferred references.
-- Expected: ACCEPT

package safe_factory

   type sensor_data is record
      id    : integer
      value : integer
      next  : sensor_data

   function create_sensor (id : integer;
                           initial_value : integer) returns not null sensor_data
      return (id = id, value = initial_value, next = null)

   function read_sensor (s : not null sensor_data) returns integer
      return s.value
