tests/negative/neg_own_observe_mutate.safe
-- Test: neg_own_observe_mutate
-- Description: Mutating through an immutable borrow.
-- Expected: REJECT observe_mutation

package observe_mutate_test

   type config is record
      rate : integer
      next : config

   function mutate_through_observer (observer : config)
      observer.rate = 200  -- ERROR: mutation through observer
